--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
-    "@capacitor/android": "6.2.0",
-    "@capacitor/app": "^6.0.2",
-    "@capacitor/browser": "6.0.4",
-    "@capacitor/core": "6.2.0",
-    "@capacitor/filesystem": "^6.0.2",
-    "@capacitor/haptics": "6.0.2",
-    "@capacitor/ios": "6.2.0",
-    "@capacitor/keyboard": "6.0.3",
-    "@capacitor/share": "6.0.3",
-    "@capacitor/splash-screen": "6.0.3",
-    "@capacitor/status-bar": "6.0.2",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/browser": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/filesystem": "^7.0.0",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.0",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/share": "^7.0.0",
+    "@capacitor/splash-screen": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@chenfengyuan/vue-barcode": "^2.0.2",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "auth0": "^4.18.0",
     "axios": "^1.7.7",
-    "capacitor-native-settings": "6.0.2",
+    "capacitor-native-settings": "7.0.1",
     "capacitor-plugin-app-tracking-transparency": "^2.0.5",
     "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
@@ -42,7 +42,7 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.2.0",
+    "@capacitor/cli": "^7.0.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -51,7 +51,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.2",
     "vite": "~5.2.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.0.22"
