--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.allianceharshaadvertising.marketplacedev"
+    namespace "com.a2adv.gwfoods"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.allianceharshaadvertising.marketplacedev"
+        applicationId "com.a2adv.gwfoods"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 35000
+        versionName "3.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
