Hot Fix For CardNumber

--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
     "@capacitor/android": "7.2.0",
-    "@capacitor/app": "^7.0.0",
+    "@capacitor/app": "7.0.1",
     "@capacitor/browser": "^7.0.0",
-    "@capacitor/core": "^7.0.0",
+    "@capacitor/core": "7.2.0",
     "@capacitor/filesystem": "^7.0.0",
-    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "^7.2.0",
-    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/keyboard": "7.0.1",
     "@capacitor/share": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.0",
-    "@capacitor/status-bar": "^7.0.0",
+    "@capacitor/status-bar": "7.0.1",
     "@chenfengyuan/vue-barcode": "^2.0.2",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^7.2.0",
+    "@capacitor/cli": "7.2.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
